--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@ body {
   min-height: 550px;
   font-family: Tahoma, Geneva, sans-serif;
   color: #FFFFFF;
-  background: #203b58 url("../imgs/background.jpg") no-repeat fixed center;
+  background: #203b58 url("http://s15.postimg.org/xokwdz2or/background.jpg") no-repeat fixed center;
   background-size: 100% 100%;
   margin-bottom: 30px;
 }
